testing html resume

--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Sanvi Kumar | Resume</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px auto;
+      max-width: 800px;
+      line-height: 1.6;
+    }
+    h1, h2 {
+      color: #3a7f6f;
+    }
+    section {
+      margin-top: 30px;
+    }
+    a {
+      color: #3a7f6f;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Sanvi Kumar</h1>
+  <p><strong>Email:</strong> sanvi@example.com | <a href="https://www.linkedin.com/in/yourname">LinkedIn</a> | <a href="https://github.com/yourname">GitHub</a></p>
+
+  <section>
+    <h2>Education</h2>
+    <p><strong>University of Wisconsin-Madison</strong>, B.S. in Data Science and Computer Science<br>Graduated: 2025</p>
+  </section>
+
+  <section>
+    <h2>Skills</h2>
+    <p>Python, SQL, R, Git, Tableau, Docker, Flask, Pandas, Spark, Scikit-learn</p>
+  </section>
+
+  <section>
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>College Scorecard Dashboard</strong> – Built R Shiny app to help students select colleges. <a href="https://github.com/yourname/college-dashboard">GitHub</a></li>
+      <li><strong>Receipt Scanner App</strong> – Python/Flask app with OCR to scan and split bills. <a href="https://github.com/yourname/receipt-scanner">GitHub</a></li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Experience</h2>
+    <p><strong>Data Intern</strong>, Kahana & Feld LLP – Summer 2024<br>Worked on Aderant migration; built SQL reports and validated system data.</p>
+  </section>
+
+</body>
+</html>
