--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Sanvi Kumar Portfolio</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -44,13 +44,13 @@
                     </h1>
                     <div class="subheading mb-5">
                         (949) 750-7662 · U.S. Citizen ·
-                        <a href="mailto:name@email.com">sanvikumar22@gmail.com</a>
+                        <a href="mailto:sanvikumar22@gmail.com">sanvikumar22@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Hi! I’m a recent graduate with a B.S. in Data Science and Computer Science from the University of Wisconsin–Madison. I’m passionate about leveraging data and software development to uncover insights and build efficient, impactful systems. Motivated by solving real-world problems through technology, I’m eager to contribute to a dynamic team and continue growing as a developer.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/sanvikumar/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                </div>
+                </div> 
             </section>
             <hr class="m-0" />
             <!-- Experience-->
